sysyruntimelibrary-master/performance_test/01_mm1.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/performance_test/01_mm1.sy:41:20: error: syntax error, unexpected R_PARENTHESIS
41|     int n = getint()
  |                     ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/performance_test/01_mm1.sy:0:0: error: not find main function
